2013-02-20  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ThirdPartyToolbox/gplot3d.m:

	- Plot graph, as in "graph theory". This is a modification of
	MATLAB's GPLOT function for vertices in 3D.

	Downloaded from

	http://www.csse.uwa.edu.au/~pk/research/matlabfns/Shapes/gplot3d.m

2013-02-19  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/Resize3DImage.cxx: (v0.2.1)

	- Fix bug. Output voxel type should be the same as the input voxel
	type, which is assumed to be float.

	* cpp/README:

	- Add entries for resize3DImage and vesselness3DImage, that I had forgotten.

2013-02-07  Ramon Casero  <rcasero@gmail.com>

	* matlab/test/test_itk_pstransform.m: (v0.1.2)

	- Add Test 3: Compare ITK thin-plate spline implementation to our
	own.

	* matlab/PointsToolbox/pts_tps_map.m: (v0.7.1)
	* matlab/PointsToolbox/pts_tps_weights.m: (v0.5.1)

	- Note that these functions use the same kernel as
	itk_pstransform() with the
	itk::ThinPlateR2LogRSplineKernelTransform.

	* matlab/ItkToolbox/ItkPSTransform.cpp: (v0.3.3)
	* matlab/ItkToolbox/itk_pstransform.m: (v0.1.1)

	- Note that this function with
	itk::ThinPlateR2LogRSplineKernelTransform is the same as our
	pts_tps_map().

2013-02-06  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/pts_tps_map.m: (v0.7.0)
	* matlab/PointsToolbox/pts_tps_weights.m: (v0.5.0)

	- Update deprecated syntax for nargchk, nargoutchk. Remove
	whitespaces before and after brackets.

	- Fix big bug. Julia Schnabel noticed that the TPS coefficients
	did not agree with those computed by Bookstein. The problem was
	that we were using U(r)=r^2 log10(r) instead of the correct
	U(r)=r^2 ln(r^2).

	- In pts_tps_map(), remove the option to enter X as a struct with
	endocardium, epicardium fields, which is a relic from my thesis
	and doesn't make sense in a general function.

2013-02-02  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/FiltersToolbox/bwsplitwithsurf.m: (v0.1.0)

	- BWSPLITWITHSURF Split a volume into connected components